Work on DB admin app